fix: dark mode button

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     /* Este es el espacio de variables de CSS */
     --color-hover-blue: #41c7f4a8;
     --color-hover-tomato: #ff6347a5;
+    --background-color-dark-mode: rgba(63, 62, 62, 0.793);
 }
 
 /*Reset sets*/
@@ -19,76 +20,94 @@ a {
     color: black;
 }
 
-/* DARK - MODE */
-.darkMode {
-    background-color: black;
-    color: white;
-}
-
-.darkMode a {
-    color: white;
-}
-
-.darkMode .header {
-    background-color: black;
-    color: white;
-}
-
-.darkMode .header {
-    border-bottom: 1px solid white;
-}
-
-.darkMode .mode {
-    color: white;
-}
-
-.darkMode .navContainer ul li {
-    border-color: white;
-}
-
-.darkMode .asideContainer {
-    border-right: 1px solid white;
-}
-
-.darkMode .taskSection ul li {
-    border-bottom: 1px solid white;
-}
-
-.darkMode .mainContainer input {
-    border: 1px solid #41c7f4a8;
-}
-
-.darkMode .mainContainer button {
-    background-color: #41c7f4;
-}
-
-.darkMode .mainContainer button:hover {
-    background-color: var(--color-hover-blue);
-}
-
-
-.darkMode .taskSection ul li:hover {
-    background-color: var(--color-hover-blue);
-}
-
-.mode {
-    background-color: transparent;
-    font-family: Verdanda;
-    font-size: 20px;
-}
-
-
-
+/* -------------------------------------------------- */
+/* -------------------------------------------------- */
 /* header */
+/* -------------------------------------------------- */
+
 .header {
     background-color: tomato;
     text-align: center;
     box-shadow: 0px -2px 9px 0px black;
 }
 
+.container-dark-mode {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.buttonDarkMode {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+}
+
+.buttonDarkMode:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.buttonDarkMode {
+    background-color: #2196F3;
+}
+
+input:focus+.buttonDarkMode {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.buttonDarkMode:before {
+    transform: translateX(26px);
+}
+
+.buttonDarkMode.round {
+    border-radius: 34px;
+}
+
+.buttonDarkMode.round:before {
+    border-radius: 50%;
+}
+
 .headerImg {
     width: 80px;
     margin: 20px auto;
+    animation-name: zoomIn;
+    animation-duration: 1.5s;
+    animation-fill-mode: both;
+}
+
+.headerImg:hover {
+    /*     animation: rotateLogo 1s infinite linear;*/
+    animation-name: tada;
+    animation-duration: 1s;
+    animation-fill-mode: both;
 }
 
 .headerNav ul {
@@ -104,12 +123,16 @@ a {
     background-color: #41c7f4;
 }
 
+/* -------------------------------------------------- */
 /* Container */
+/* -------------------------------------------------- */
 .container {
     display: flex;
 }
 
+/* -------------------------------------------------- */
 /* Aside */
+/* -------------------------------------------------- */
 aside {
     width: 30%;
 }
@@ -182,10 +205,144 @@ aside {
 .taskSection ul li {
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--color-hover-tomato);
     padding: 15px;
 }
 
 .completedTask {
     text-decoration: line-through;
+}
+
+/* ----------------------------------------- */
+/* ANIMATIONS */
+/* ----------------------------------------- */
+@keyframes rotateLogo {
+    0% {
+        transform: rotateY(2deg);
+    }
+
+    20% {
+        transform: rotateY(72deg);
+    }
+
+    40% {
+        transform: rotateY(144deg);
+    }
+
+    60% {
+        transform: rotateY(216deg);
+    }
+
+    80% {
+        transform: rotateY(288deg);
+    }
+
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
+@keyframes tada {
+    0% {
+        transform: scale3d(1, 1, 1);
+    }
+
+    10%,
+    20% {
+        transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
+    }
+
+    30%,
+    50%,
+    70%,
+    90% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+    }
+
+    40%,
+    60%,
+    80% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+    }
+
+    100% {
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+@keyframes zoomIn {
+    0% {
+        opacity: 0;
+        transform: scale3d(.3, .3, .3);
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
+
+
+/* -------------------------------------------------- */
+/* DARK - MODE */
+/* -------------------------------------------------- */
+.darkMode {
+    background-color: var(--background-color-dark-mode);
+    color: white;
+}
+
+.darkMode a {
+    color: white;
+}
+
+.darkMode .header {
+    background-color: var(--background-color-darkMode);
+    color: white;
+}
+
+.darkMode .header {
+    border-bottom: 1px solid white;
+}
+
+.darkMode .mode {
+    color: white;
+}
+
+.darkMode .navContainer ul li {
+    border-color: white;
+}
+
+.darkMode .asideContainer {
+    border-right: 1px solid white;
+}
+
+.darkMode .navContainer ul li:hover {
+    background-color: var(--color-hover-blue);
+}
+
+.darkMode .taskSection ul li {
+    border-bottom: 1px solid var(--color-hover-blue);
+}
+
+.darkMode .mainContainer input {
+    border: 1px solid #41c7f4a8;
+}
+
+.darkMode .mainContainer button {
+    background-color: #41c7f4;
+}
+
+.darkMode .mainContainer button:hover {
+    background-color: var(--color-hover-blue);
+}
+
+.darkMode .taskSection {
+    border: 2px solid var(--color-hover-blue);
+}
+
+.darkMode .taskSection ul li:last-child {
+    border-bottom: none;
+}
+
+.darkMode .taskSection ul li:hover {
+    background-color: var(--color-hover-blue);
 }
